mofique la pag comenzar

--- a/pages/comenzar.html
+++ b/pages/comenzar.html
@@ -54,9 +54,9 @@
         <nav class="nav">
             <!--NAV A menu principal-->
             <a href="../index.html">Inicio</a>
-            <a href="../pages/Curso.html">Curso</a>
-            <a href="../pages/Comenzar.html">Comenzar</a>
-            <a href="../pages/Acceso.html">Acceso</a>
+            <a href="../pages/curso.html">Curso</a>
+            <a href="../pages/comenzar.html">Comenzar</a>
+            <a href="../pages/acceso.html">Acceso</a>
         </nav>
     </header>
     <!--SECTION (primera parte de grid) -->
