agregue algunos alt a footer para describir las imagenes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main class="gridMain">
         <div>
             <h2 class="gridMainText">Aprende inglés más rápido y más fácil este 2022!</h2>
-            <img class="gridMainEs" src="./multimedia/estudiaringles.jpg" alt="img">
+            <img class="gridMainEs" src="./multimedia/estudiaringles.jpg" alt="estudiante">
         </div>
         <!--FORM maquetado con BOOTSTRAP-->
         <form class="gridMainForm">
@@ -97,11 +97,11 @@
         </div>
         <div>
             <a href="#">Instagram</a>
-            <img class="gridFooterUno" src="./multimedia/instaicon.png">
+            <img class="gridFooterUno" src="./multimedia/instaicon.png" alt="instagram">
         </div>
         <div>
             <a href="#">Facebook</a>
-            <img class="gridFooterDos" src="./multimedia/fbicon.png">
+            <img class="gridFooterDos" src="./multimedia/fbicon.png" alt="facebook">
         </div>
         <div>
             <h4 class="gridFooterTres">Correo Electronico:Le-PewEnglish@gmail.com</h4>
