--- a/pages/acceso.html
+++ b/pages/acceso.html
@@ -97,11 +97,11 @@
         </div>
         <div>
             <a href="#">Instagram</a>
-            <img class="gridFooterUno" src="../multimedia/instaicon.png">
+            <img class="gridFooterUno" src="../multimedia/instaicon.png" alt="instagram">
         </div>
         <div>
             <a href="#">Facebook</a>
-            <img class="gridFooterDos" src="../multimedia/fbicon.png">
+            <img class="gridFooterDos" src="../multimedia/fbicon.png" alt="facebook">
         </div>
         <div>
             <h3 class="gridFooterTres">Correo Electronico:Le-PewEnglish@gmail.com</h3>
